--- a/JavaSpringServer/src/main/resources/application.properties
+++ b/JavaSpringServer/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/prueba01db
-spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.url=jdbc:mysql://pruebaibm.c2vtilnpwtk0.us-west-1.rds.amazonaws.com:3306/pruebaibm
+spring.datasource.username=pruebaibm
+spring.datasource.password=pruebaibm
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+!spring.datasource.url=jdbc:mysql://localhost:3306/prueba01db
 !server.contextPath=/
